--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfólio</title>
+		<title>Portfólio de Projetos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -181,7 +181,7 @@
 								</header>
 								<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#"></a>josewrpereira@gmail.com</li>
+									<li class="icon solid fa-envelope"><a href="#"></a>josewrpereira.ds@gmail.com</li>
 									<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/josewrpereira/">LinkedIn</li>
 								</ul>
 							</section>
