linkedin em nova aba

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 								<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 								<ul class="contact">
 									<li class="icon solid fa-envelope"><a href="#"></a>josewrpereira.ds@gmail.com</li>
-									<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/josewrpereira/">LinkedIn</li>
+									<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/josewrpereira/" target="_blank">LinkedIn</li>
 								</ul>
 							</section>
 						<!-- Footer -->
